# zapcut-ai

./: .gitignore  API_URL_EXPLANATION.md  BACKEND_CORS_ANALYSIS.md  BACKEND_VS_CELERY_WORKER.md  DEBUG_CELERY_WORKER.md  DEPLOYMENT.md  FIX_PRODUCTION_URLS.md  ISSUES_SUMMARY.md  LOCAL_SETUP.md  PRD.md  PRODUCTION_URL_UPDATED.md  QUICKSTART.md  QUICK_START.md  RAILWAY_CONFIG_CHECKLIST.md  RAILWAY_CONFIG_FIX.md  RAILWAY_DEPLOYMENT_GUIDE.md  RAILWAY_ENV_TEMPLATE.md  RAILWAY_QUICK_START.md  README.md  SETUP.md  SETUP_COMPLETE.md  START_CELERY_WORKER.md  STATUS.md  SUPABASE_SETUP_GUIDE.md  SUPABASE_TOKEN_ANALYSIS.md  VERIFY_CELERY_WORKING.md  deploy_all.sh  railway.toml  setup_local.sh  start.sh  tasks.md  vercel.json  zapcut_chat_prd.md
app/: README.md  (+4 more)
backend/: .dockerignore  .env  .env.example  .gitignore  BACKEND_ANALYSIS.md  BRANDS_ENDPOINT_TEST.md  DEPLOY.md  DEPLOYMENT.md  Dockerfile  FINAL_TEST_RESULTS.md  FIX_DATABASE_CONNECTION.md  FLY_IO_SEPARATION_GUIDE.md  LOCAL_SERVER_TEST.md  LOGGING_IMPLEMENTATION.md  Procfile  QUICK_DEPLOY.md  README.md  STRUCTURE.md  SUPABASE_SETUP.md  TESTING_CHECKLIST.md  TEST_RESULTS.md  create_tables.py  deploy-both.sh  fly.api.toml  fly.toml  fly.worker.toml  init_db.py  kill-fly-machines.sh  migrate_audio_columns.sql  nixpacks.toml  pyproject.toml  railway.json  railway.toml  railway.worker.json  requirements.txt  setup-local.sh  start-worker.sh  start.sh  test_backend.py  test_db_connection.py  (+5 more)
backend/alembic/: env.py
backend/app/: celery_app.py  config.py  database.py  main.py
backend/migrations/: 001_add_generation_jobs.sql  (+3 more)
(+325 files in other folders)
